syntax = "proto3";

package service_component;

option go_package = "service-component/pb;pb";

import "request.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "RT Service"
  }

  security_definitions: {
    security: {
      key: "JWT"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "JWT token, can be received from /login"
      }
    }
  }
};

service RTService {
  rpc Login(LoginRequest) returns(LoginResponse) {
    option (google.api.http) = {
      get: "/login"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Authorization";
      security: { }
    };
  }

  rpc Register(RegisterRequest) returns(google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/register"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Authorization";
      security: { }
    };
  }

  rpc CheckToken(google.protobuf.Empty) returns(google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/check"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Authorization";
      security: {
        security_requirement: {
          key: "JWT";
          value: {}
        }
      }
    };
  }

  rpc GetFilm(GetFilmRequest) returns(Film) {
    option (google.api.http) = {
      get: "/film/{id}/get"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Film";
      security: { }
    };
  }

  rpc GetFilms(google.protobuf.Empty) returns(GetFilmsResponse) {
    option (google.api.http) = {
      get: "/film/get_all"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Film";
      security: { }
    };
  }

  rpc RateFilm(RateFilmRequest) returns(google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/film/{id}/rate"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Film";
      security: {
        security_requirement: {
          key: "JWT";
          value: {}
        }
      }
    };
  }

  rpc GetRatingsForModeration(google.protobuf.Empty) returns(GetRatingsForModerationResponse) {
    option (google.api.http) = {
      get: "/rating/moderation"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Rating";
      security: {
        security_requirement: {
          key: "JWT";
          value: {}
        }
      }
    };
  }

  rpc UnlockReview(UnlockReviewRequest) returns(google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/rating/{id}/unlock"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Rating";
      security: {
        security_requirement: {
          key: "JWT";
          value: {}
        }
      }
    };
  }
}